<resources>
    <string name="app_name">WeatherAppAPI</string>
    <string name="city">Город</string>
    <string name="temperature">Температура</string>
    <string name="pressure">Давление</string>
    <string name="humidity">Влажность</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="search">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>

    <string name="alert_dialog_1">Alert Dialog с Fail connection</string>
    <string name="exclamation">Важное сообщение!</string>
    <string name="press_button">Нажмите кнопку чтобы закрыть окно!</string>
    <string name="button">OK</string>
</resources>